chore(css): Minor alignment fix

--- a/src/components/ui/DataEntryBox/index.css
+++ b/src/components/ui/DataEntryBox/index.css
@@ -35,6 +35,7 @@
 }
 
 .datebox {
-    padding: 0 1.5rem;
+    /*padding: 0 1.5rem;*/
     width: 67px;
+    text-align: center;
 }
